--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.2.11</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
