--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <jackson.version>2.6.6</jackson.version>
-    <jersey.version>2.23.1</jersey.version>
+    <jackson.version>2.8.0</jackson.version>
+    <jersey.version>2.25.1</jersey.version>
     <slf4j.version>1.7.21</slf4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -149,6 +149,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+    <groupId>io.swagger</groupId>
+        <artifactId>swagger-jersey2-jaxrs</artifactId>
+        <version>1.5.23</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
