--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
       <version>2.25.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.vladsch.flexmark</groupId>
+      <artifactId>flexmark-all</artifactId>
+      <version>0.61.30</version>
+    </dependency>
   </dependencies>
 
   <repositories>
