--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <jersey.version>2.23.1</jersey.version>
     <slf4j.version>1.7.21</slf4j.version>
     <sentry.version>1.7.30</sentry.version>
+    <maven.deploy.skip>true</maven.deploy.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
